--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "myapi",
   "version": "1.0.0",
-  "description": "A RESTful API for managing characters with MySQL database",
+  "description": "A comprehensive GM API for Vampire: The Masquerade with character management, world information, and AI story generation",
   "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
     "dev": "nodemon server/index.js"
   },
-  "keywords": ["api", "express", "mysql", "rest"],
+  "keywords": ["api", "express", "mysql", "rest", "vampire", "masquerade", "rpg", "gm"],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.6.5"
+    "mysql2": "^3.6.5",
+    "openai": "^4.20.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
